# geo-fixability

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Hello_World.md  PIPELINE_NOTES.md  README.md  REVISION_PLAN.md  ROADMAP.md  job.yaml  pyproject.toml  run_pipeline.sh  sweep_config.yaml
.github/: copilot-instructions.md
paper/: references.bib
src/geo_fixability/: __init__.py  features.py  filtering.py  mapping.py  metrics.py  ml.py  navigation.py  pipeline.py  terrain.py  trajectory.py
src/geo_fixability/scripts/: analyze_results.py  fetch_terrain.py  generate_maps.py  plot_pf_results.py  plot_q_validation.py  plot_sweep.py  run_experiment.py  run_pf_experiment.py  run_sweep.py  validate_real_terrain.py
tests/: test_core.py
